--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
-    "angular-youtube-mb": "~0.1.4"
+    "angular-youtube-mb": "~0.1.4",
+    "ngInfiniteScroll": "1.0.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
