--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
     "angular-youtube-mb": "~0.1.4",
-    "ngInfiniteScroll": "1.0.0"
+    "ngInfiniteScroll": "1.0.0",
+    "jquery.mb.ytplayer": "2.7.5"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
