--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -17,11 +17,32 @@
       "uibootstrap": true,
       "socketio": true,
       "mongoose": true,
-      "auth": true,
-      "oauth": true,
-      "googleAuth": true,
-      "facebookAuth": true,
-      "twitterAuth": true
+      "auth": true
     }
+  },
+  "generator-ng-component": {
+    "routeDirectory": "client/app/",
+    "directiveDirectory": "client/app/",
+    "filterDirectory": "client/app/",
+    "serviceDirectory": "client/app/",
+    "basePath": "client",
+    "moduleName": "",
+    "filters": [
+      "uirouter"
+    ],
+    "extensions": [
+      "js",
+      "html",
+      "css"
+    ],
+    "directiveSimpleTemplates": "",
+    "directiveComplexTemplates": "",
+    "filterTemplates": "",
+    "serviceTemplates": "",
+    "factoryTemplates": "",
+    "controllerTemplates": "",
+    "decoratorTemplates": "",
+    "providerTemplates": "",
+    "routeTemplates": ""
   }
 }
