--- a/bower.json
+++ b/bower.json
@@ -14,10 +14,7 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
-    "angular-ui-router": "~0.2.10",
-    "angular-youtube-mb": "~0.1.4",
-    "ngInfiniteScroll": "1.0.0",
-    "jquery.mb.ytplayer": "2.7.5"
+    "angular-ui-router": "~0.2.10"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
