--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
     "animate.css": "~3.2.3",
-    "angular-animate": "~1.3.14"
+    "angular-animate": "~1.3.14",
+    "videojs-youtube": "~1.2.8"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
