--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,11 @@
     "angular-ui-router": "~0.2.10",
     "animate.css": "~3.2.3",
     "angular-animate": "~1.3.14",
-    "videojs-youtube": "~1.2.8"
+    "videogular-youtube": "master",
+    "videogular-themes-default": "~1.1.0",
+    "videogular-buffering": "~1.1.0",
+    "videogular-controls": "~1.1.0",
+    "videogular-poster": "~1.1.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
