Added videojs and videojs-angular.

--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "jquery": "~2.1.1",
-    "mithril": "*"
+    "mithril": "*",
+    "videojs-youtube": "~1.2.12"
   }
 }
