Working on parsing the cloudformation template file.

--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "beatsch",
+  "name": "cloudslicer",
   "private": true,
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
     "modernizr": "~2.8.1",
     "mithril": "~0.2.0",
-    "videojs-youtube": "~1.2.12"
+    "lodash": "~3.10.0"
   },
   "overrides": {
     "bootstrap-sass": {
