--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "browserify": "^10.2.6",
+    "svg-browserify": "0.0.2",
     "vinyl-source-stream": "^1.1.0"
   }
 }
