--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "snap.svg": "~0.4.1",
     "opentip": "~2.4.6",
     "d3": "~3.5.6",
-    "d3-tip": "~0.6.7"
+    "d3-tip": "~0.6.7",
+    "pixi.js": "~3.0.7"
   },
   "overrides": {
     "bootstrap-sass": {
