--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
   },
   "dependencies": {
     "browserify": "^10.2.6",
+    "filewalker": "^0.1.2",
+    "fs-extra": "^0.24.0",
+    "imagemagick": "^0.1.3",
+    "inkscape": "0.0.5",
+    "node-spritesheet": "^0.4.2",
     "svg-browserify": "0.0.2",
     "vinyl-source-stream": "^1.1.0"
   }
