--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
+    "classie": "~1.0.1",
     "codemirror": "~5.4.0",
     "d3": "~3.5.6",
     "d3-tip": "~0.6.7",
